# Lely-Core-cmake

./: .gitignore  .mxproject  CMakeLists.txt  Lely-Core-cmake.code-workspace  Lely-Core-cmake.ioc
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h  version.h.in
Core/Src/: CConstantVelocity.cpp  CConstantVelocity.hpp  CLinearProfile.cpp  CLinearProfile.hpp  FreeRTOS_CLI.c  FreeRTOS_CLI.h  IProfile.hpp  app_cli.c  app_cli.h  app_freertos.c  app_freertos.cpp  cli_handlers.c  cli_handlers.h  extern_variables.h  fdcan.c  gpio.c  main.c  main.cpp  rtc.c  sdev.c  spi.c  stm32_time.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  tim.c  usart.c
Core/bsp/: can.c  ring_buffer.c
cmake/: version.cmake
cmake/stm32cubemx/: CMakeLists.txt
docs/: cli.md  compile-lely.md  fram.md  generate-docs.md  input.c  migrate_sdev.py  output_fram.c  wiring.yml
libcia402/: CMakeLists.txt  statemachine.c  statemachine.h
